--- a/Lab5/report.tex
+++ b/Lab5/report.tex
@@ -70,6 +70,27 @@ OUTPUT: 3 Scatterplots, thrust vs. Fuel flow rate, thrust vs.
 exhaust temperature, thrust vs. Ambient temperature.
 What should be on the y-axis?
 
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=\textwidth]{ratethrust.png}
+ \caption{INSERT CAPTION HERE}
+ % \label{q6}
+\end{figure}
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=\textwidth]{extempthrust.png}
+ \caption{INSERT CAPTION}
+ % \label{q6}
+\end{figure}
+
+\begin{figure}[H]
+ \centering
+ \includegraphics[width=\textwidth]{ambtempthrust.png}
+ \caption{INSERT}
+ % \label{q6}
+\end{figure}
+
 \subsection{(b)	Comment briefly on the relationship between thrust and each of the three predictors. In particular, comment on the overall shape (line, curve), direction (positive, negative), and strength (size of the scatter and its inclination) of the relationship. Which of the three predictor variables seems to be the best predictor of thrust? }
 Look at the center of the “clouds”.  Are they linear? Strength of
 linear relationship?
@@ -149,27 +170,6 @@ What’s the best predictor? S = model standard deviation
  \label{q6}
 \end{table}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-% \begin{figure}[H]
-%  \centering
-%  \includegraphics[width=\textwidth]{q6.png}
-%  \caption{Plot of the strength of Alloy 2 vs. the effect of the treatment.}
-%  \label{q6}
-% \end{figure}
 
 \newpage
 \thispagestyle{empty}
